--- a/Openclassrooms_javascript/index.html
+++ b/Openclassrooms_javascript/index.html
@@ -8,6 +8,7 @@
     
     
     <!-- <script src="./index.js"></script> -->
-    <script src="./index2.js"></script>
+    <!-- <script src="./index2.js"></script> -->
+    <script src="./index3.js"></script>
 </body>
 </html>
