dossier et code

--- a/Tache_JAVASRCIPT/Tache1/index.html
+++ b/Tache_JAVASRCIPT/Tache1/index.html
@@ -5,8 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> tp javascript</h1>
-    <!-- <script src="./index.js"></script> -->
-    <script src="./boucle.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
