--- a/Tache_JAVASRCIPT/Tache1/var_cons.html
+++ b/Tache_JAVASRCIPT/Tache1/var_cons.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script src="./var_cons.js"></script>
 </body>
 </html>
