--- a/tache_js/01_js/index.html
+++ b/tache_js/01_js/index.html
@@ -5,8 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> tp javascript</h1>
+    <h1>Les variables en Javascript</h1>
+    <p>Dans cet exemple, x y et z sont variables.</p>
+    <p id="demo"></p>
     <script src="./index.js"></script>
-    <!-- <script src="./boucle.js"></script> -->
 </body>
 </html>
