--- a/tache_js/02_js/exercice.html
+++ b/tache_js/02_js/exercice.html
@@ -5,17 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Les types de variables en javascript</h1>
-    <p>Utilisation de l’opérateur typeof pour trouver le type de variable</p>
-    <ul>
-        <li>string</li>
-        <li>number</li>
-        <li>boolean</li>
-        <li>undefined</li>
-        <li>object</li>
-        <li>function</li>
-    </ul>
-    <h1>Utilisation de l’opérateur typeof dans les contrôles conditionnels</h1>
+    <h1>Declaration de variables en javascript</h1>
+    <p>Dans cet exemple x, y, z, a et b sont des variables </p>
+    
     <script src="./exercice.js"></script>
 </body>
 </html>
