--- a/exo_perso/index.html
+++ b/exo_perso/index.html
@@ -3,9 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> tp javascript</h1>
+    <!-- <div>
+        <button class="btn btn-1"></button>
+        <button class="btn btn-2"></button>
+        <button class="btn btn-3"></button>
+        <button class="btn btn-4"></button>
+        <button class="btn btn-5"></button>
+        <button class="btn btn-6"></button>
+        <button class="btn btn-7"></button>
+        <button class="btn btn-8"></button>
+    </div> -->
+    <h1>Presentation Javascript</h1>
+    <p id="para">DEMO</p>
     <script src="./index.js"></script>
     <!-- <script src="./boucle.js"></script> -->
 </body>
