ajoute button et hover

--- a/exo_perso/index.html
+++ b/exo_perso/index.html
@@ -16,9 +16,16 @@
         <button class="btn btn-7"></button>
         <button class="btn btn-8"></button>
     </div> -->
-    <h1>Presentation Javascript</h1>
-    <p id="para">DEMO</p>
-    <script src="./index.js"></script>
+    <!-- <h1>Presentation Javascript</h1>
+    <p id="para">DEMO</p> -->
+    <div class="container">
+        <div class="bouton-1"></div>
+        <div class="bouton-2"></div>
+        <div class="bouton-3"></div>
+        <div class="bouton-4"></div>
+    </div>
+    <script src="./hover.js"></script>
+    <!-- <script src="./index.js"></script> -->
     <!-- <script src="./boucle.js"></script> -->
 </body>
 </html>
