ajout projet calculatrice

--- a/exo_perso/index.html
+++ b/exo_perso/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p id="demo"></p>
     <!-- <div>
         <button class="btn btn-1"></button>
         <button class="btn btn-2"></button>
@@ -18,14 +19,14 @@
     </div> -->
     <!-- <h1>Presentation Javascript</h1>
     <p id="para">DEMO</p> -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="bouton-1"></div>
         <div class="bouton-2"></div>
         <div class="bouton-3"></div>
         <div class="bouton-4"></div>
-    </div>
-    <script src="./hover.js"></script>
+    </div> -->
+    <!-- <script src="./hover.js"></script> -->
     <!-- <script src="./index.js"></script> -->
-    <!-- <script src="./boucle.js"></script> -->
+    <script src="./boucle.js"></script>
 </body>
 </html>
