--- a/20_Exercice_Javascript/exercice10.html
+++ b/20_Exercice_Javascript/exercice10.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="multiplication">Table de multiplication</p>
-    <script src="./exercice2.js"></script>
+    <p id="code"></p>
+    <script src="./exercice10.js"></script>
 </body>
 </html>
