--- a/20_Exercice_Javascript/exercice19.html
+++ b/20_Exercice_Javascript/exercice19.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="multiplication">Table de multiplication</p>
-    <script src="./exercice2.js"></script>
+    <p id="color"></p>
+    <script src="./exercice19.js"></script>
 </body>
 </html>
