--- a/Manipulation_DOM_PROJET_JS/projet-1.html
+++ b/Manipulation_DOM_PROJET_JS/projet-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="projet-1.css">
+    <link rel="stylesheet" href="./asset/projet-1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <script src="project-1.js"></script>
+    <script src="./asset/project-1.js"></script>
 
 
 </body>
