--- a/Manipulation_DOM_PROJET_JS/projet-2.html
+++ b/Manipulation_DOM_PROJET_JS/projet-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- StyleSheet -->
-    <link rel="stylesheet" href="projet-2.css">
+    <link rel="stylesheet" href="./asset/projet-2.css">
     <!-- Global Font Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <script src="project-2.js"></script>
+    <script src="./asset/project-2.js"></script>
 
 
 </body>
