--- a/Manipulation_DOM_PROJET_JS/projet-5.html
+++ b/Manipulation_DOM_PROJET_JS/projet-5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- StyleSheet -->
-    <link rel="stylesheet" href="projet-5.css">
+    <link rel="stylesheet" href="./asset/projet-5.css">
     <!-- Global Font Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
     </div>
 
 
-    <script src="project-5.js"></script>
+    <script src="./asset/project-5.js"></script>
 
 
 </body>
