--- a/tache_js/07_js/index.html
+++ b/tache_js/07_js/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Document</title>
+
 </head>
 <body>
     <!-- <h1>Methode map() js</h1>
     <p>Créez un tableau de nombres et utilisez la méthode .map() pour doubler chaque nombre du tableau.</p> -->
 
-    <h1>Methode filter() js</h1>
-    <p>Créez un tableau de chaînes et utilisez la méthode .filter() pour renvoyer un nouveau tableau avec uniquement les chaînes dont la longueur est supérieure à 3.</p>
+    <!-- <h1>Methode filter() js</h1>
+    <p>Créez un tableau de chaînes et utilisez la méthode .filter() pour renvoyer un nouveau tableau avec uniquement les chaînes dont la longueur est supérieure à 3.</p> -->
+
+    <!-- <h1>Methode reduce() js</h1>
+    <p>Utilisez la méthode .reduce() pour résumer tous les nombres dans un tableau de nombres. </p> -->
+
+    <!-- <h1>Methode sort() js</h1>
+    <p>Utilisez la méthode .sort() pour trier un tableau de chaînes par ordre alphabétique.</p> -->
+
+    <h1>Methode foreach() js</h1>
+    <p>Utilisez la méthode .forEach() pour imprimer chaque élément d'un tableau.</p>
+
+    <ul class="list-group">
+
+    </ul>
     <script src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
