--- a/Manipulation_DOM_PROJET_JS/projet-1.html
+++ b/Manipulation_DOM_PROJET_JS/projet-1.html
@@ -24,7 +24,8 @@
         <div class="main-content">
             <div class="text-area">
                 <span class="quote">
-                    "Je fais de mon mieux – du mieux que je peux ; et je compte bien continuer ainsi jusqu'à la fin."
+                    <!-- "Je fais de mon mieux – du mieux que je peux ; et je compte bien continuer ainsi jusqu'à la fin." -->
+                    "Abraham Lincoln !"
                 </span>
             </div>
             <div class="person">Abraham Lincoln</div>
