--- a/To_do_List/projet_1/index.html
+++ b/To_do_List/projet_1/index.html
@@ -7,21 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="myDIV" class="header">
+    <div class="dolist">
+      <div id="myDIV" class="header">
         <h2 style="margin:5px">My To Do List</h2>
         <input type="text" id="myInput" placeholder="Title...">
-        <span onclick="newElement()" class="addBtn">Add</span>
+        <button id="addBtn"> Ajouter</button>
+        <div id="myUL"></div>
       </div>
-      
-      <ul id="myUL">
-        <!-- <li>Hit the gym</li>
-        <li class="checked">Pay bills</li>
-        <li>Meet George</li>
-        <li>Buy eggs</li>
-        <li>Read a book</li>
-        <li>Organize office</li> -->
-      </ul>
-      <script src="./app.js"></script>
+    </div>
+    <script src="./app.js"></script>
       
 </body>
 </html>
