--- a/exo_perso/index.html
+++ b/exo_perso/index.html
@@ -27,6 +27,6 @@
     </div> -->
     <!-- <script src="./hover.js"></script> -->
     <!-- <script src="./index.js"></script> -->
-    <script src="./boucle.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
